.gitignore file was added. WebAPI was created. RebbitMQ was configured

--- a/Scrubber/ScruperAPI.csproj
+++ b/Scrubber/ScruperAPI.csproj
@@ -6,6 +6,8 @@
 
   <ItemGroup>
     <PackageReference Include="AngleSharp" Version="0.14.0" />
+    <PackageReference Include="easynetq" Version="3.7.1" />
+    <PackageReference Include="RabbitMQ.Client" Version="5.1.2" />
   </ItemGroup>
 
 
